# DRL-Portfolio-Management

./: .env.example  .gitignore  README.md  pyproject.toml
sql/: 01_create_tables.sql
src/crypto_portfolio/: config.py
src/crypto_portfolio/clients/: coingecko.py
